Resources/Parsers/bcl/bclParser.js
// Generated from C:/Users/megam/jupyter_ops/Resources/Parsers/bcl/bcl.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import bclListener from './bclListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class bclParser extends antlr4.Parser {

    static grammarFileName = "bcl.g4";
    static literalNames = [ null, "'00'", "'01'", "'1'" ];
    static symbolicNames = [ null, null, null, null, "WS" ];
    static ruleNames = [ "bcl", "term" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = bclParser.ruleNames;
        this.literalNames = bclParser.literalNames;
        this.symbolicNames = bclParser.symbolicNames;
    }



	bcl() {
	    let localctx = new BclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, bclParser.RULE_bcl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 7;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 14) !== 0)) {
	            this.state = 4;
	            this.term();
	            this.state = 9;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 10;
	        this.match(bclParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	term() {
	    let localctx = new TermContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, bclParser.RULE_term);
	    try {
	        this.state = 18;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 12;
	            this.match(bclParser.T__0);
	            break;
	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 13;
	            this.match(bclParser.T__1);
	            break;
	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 14;
	            this.match(bclParser.T__2);
	            this.state = 15;
	            this.term();
	            this.state = 16;
	            this.term();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

bclParser.EOF = antlr4.Token.EOF;
bclParser.T__0 = 1;
bclParser.T__1 = 2;
bclParser.T__2 = 3;
bclParser.WS = 4;

bclParser.RULE_bcl = 0;
bclParser.RULE_term = 1;

class BclContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = bclParser.RULE_bcl;
    }

	EOF() {
	    return this.getToken(bclParser.EOF, 0);
	};

	term = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(TermContext);
	    } else {
	        return this.getTypedRuleContext(TermContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof bclListener ) {
	        listener.enterBcl(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof bclListener ) {
	        listener.exitBcl(this);
		}
	}


}



class TermContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = bclParser.RULE_term;
    }

	term = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(TermContext);
	    } else {
	        return this.getTypedRuleContext(TermContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof bclListener ) {
	        listener.enterTerm(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof bclListener ) {
	        listener.exitTerm(this);
		}
	}


}




bclParser.BclContext = BclContext; 
bclParser.TermContext = TermContext; 


